@@ -12,14 +12,13 @@ import javax.swing.JPanel;
 import javax.swing.WindowConstants;
 import javax.swing.border.EmptyBorder;
 import javax.swing.event.ListSelectionEvent;
-import javax.swing.event.ListSelectionListener;
 import pondero.Globals;
 import pondero.L10n;
 import pondero.model.Workbook;
 import pondero.model.entities.Participant;
 
 @SuppressWarnings("serial")
-public class ParticipantSelectionDialog extends JDialog {
+public class ParticipantSelectionDialog extends JDialog implements ParticipantSelectionListener, ActionListener {
 
     public static void main(final String[] args) throws Exception {
         final ParticipantSelectionDialog dialog = new ParticipantSelectionDialog(Globals.getDefaultWorkbook());
@@ -31,7 +30,7 @@ public class ParticipantSelectionDialog extends JDialog {
     private int                       closeOperation = JOptionPane.CANCEL_OPTION;
 
     private final ParticipantSelector lstParticipants;
-    private final JButton             okButton;
+    private final JButton             selectButton;
     private final JButton             cancelButton;
 
     public ParticipantSelectionDialog(final Workbook wb) throws Exception {
@@ -45,15 +44,7 @@ public class ParticipantSelectionDialog extends JDialog {
         contentPanel.setLayout(new BorderLayout(0, 0));
         {
             lstParticipants = new ParticipantSelector(wb);
-            lstParticipants.addListSelectionListener(new ListSelectionListener() {
-
-                @Override
-                public void valueChanged(final ListSelectionEvent e) {
-                    selection = lstParticipants.getSelectedValue();
-                    okButton.setEnabled(selection != null);
-                }
-
-            });
+            lstParticipants.addListSelectionListener(this);
             contentPanel.add(lstParticipants, BorderLayout.CENTER);
         }
 
@@ -62,20 +53,12 @@ public class ParticipantSelectionDialog extends JDialog {
             buttonPane.setBorder(new EmptyBorder(6, 0, 5, 0));
             buttonPane.setLayout(new FlowLayout(FlowLayout.RIGHT));
             {
-                okButton = new JButton(L10n.getString("lbl.choose")); //$NON-NLS-1$
-                okButton.setEnabled(false);
-                okButton.addActionListener(new ActionListener() {
-
-                    @Override
-                    public void actionPerformed(final ActionEvent e) {
-                        closeOperation = JOptionPane.OK_OPTION;
-                        ParticipantSelectionDialog.this.setVisible(false);
-                    }
-
-                });
-                okButton.setActionCommand("Ok"); //$NON-NLS-1$
-                buttonPane.add(okButton);
-                getRootPane().setDefaultButton(okButton);
+                selectButton = new JButton(L10n.getString("lbl.choose")); //$NON-NLS-1$
+                selectButton.setEnabled(false);
+                selectButton.addActionListener(this);
+                selectButton.setActionCommand("Ok"); //$NON-NLS-1$
+                buttonPane.add(selectButton);
+                getRootPane().setDefaultButton(selectButton);
             }
             {
                 cancelButton = new JButton(L10n.getString("lbl.cancel")); //$NON-NLS-1$
@@ -97,12 +80,34 @@ public class ParticipantSelectionDialog extends JDialog {
         getContentPane().add(contentPanel, BorderLayout.CENTER);
     }
 
+    @Override
+    public void actionPerformed(ActionEvent evt) {
+        closeOperation = JOptionPane.OK_OPTION;
+        ParticipantSelectionDialog.this.setVisible(false);
+    }
+
     public int getCloseOperation() {
         return closeOperation;
     }
 
     public Participant getSelection() {
         return selection;
+    }
+
+    @Override
+    public void valueChanged(ListSelectionEvent e) {
+        selection = lstParticipants.getSelectedValue();
+        selectButton.setEnabled(selection != null);
+    }
+
+    @Override
+    public void valueChosen(ListSelectionEvent evt) {
+        selection = lstParticipants.getSelectedValue();
+        if (selection != null) {
+            actionPerformed(null);
+        } else {
+            selectButton.setEnabled(false);
+        }
     }
 
 }
